--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "bot": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
