--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "cron": "^4.0.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
-    "next": "^14.0.0", 
+    "luxon": "^3.5.0",
+    "next": "^14.0.0",
+    "node-cron": "^3.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
