--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "luxon": "^3.5.0",
+    "moment-timezone": "^0.5.47",
     "next": "^14.0.0",
     "node-cron": "^3.0.3",
     "react": "^18.0.0",
